--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,11 @@
         display: none;
       }
     }
+    .bg-dark {
+    background-color: #000000!important;
+
+    max-height: 54vh;
+}
 
     /* #navbar2{
       width: 9vw;
@@ -76,10 +81,12 @@
       text-decoration: none;
       color: white;
       font: weight 9px;
+
       
     }
 
 
+   
 
     .nn {
       max-height: 128vh;
@@ -390,6 +397,8 @@
     background: #292929!important;
     overflow-x: none;
 }
+
+
 
 .middlesection-mm{
  
