--- a/templates/home/livechat.html
+++ b/templates/home/livechat.html
@@ -85,7 +85,7 @@
     }
 
     .chats {
-        padding: 30px 4px 0px 13px;
+        padding: 3px 6px;
     }
 
     .receivedmsg {
@@ -95,7 +95,7 @@
         padding: 0 0 0 0px;
         vertical-align: top;
         text-align: left;
-        width: 100%;
+        min-width: 60%;
         margin-top: 5px;
     }
 
@@ -131,7 +131,9 @@
         /* float: right; */
         /* overflow: hidden; */
         overflow-y: scroll;
-        margin: -10px 8px
+        margin: -10px 8px;
+        min-width: 60%;
+        
         
     }
 
