--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -21,8 +21,8 @@
   }
 
   .box {
-    margin: 50px;
-    padding: 20px;
+    margin: 0;
+    padding: 0;
   background-color: rgb(238, 238, 238);
   box-shadow: 0px 2px 18px -4px rgba(0, 0, 0, 0.75);
   }
