--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -308,6 +308,21 @@
               color: white;
               padding: 0 7px;
        }
+       #inst{
+              background-color: rgb(209, 209, 202);
+              max-height: 40vh;
+              min-height: 60px;
+              min-width: 30px;
+              max-width: 60vw;
+              text-align: center;
+              font-family: 'Times New Roman', Times, serif;
+              font-weight: bolder;
+              color: white;
+              font-size: 3em;
+              margin: 10px auto ;
+              
+       }
+
 </style>
 
 {% endblock css %}
@@ -364,6 +379,10 @@
 
               <div id="ff">
                      <div id="CS">
+                            <div id="inst">
+                                   sovmoi
+                                   
+                            </div>
 
 
                             <canvas id="myChartCS" style="width:100%;max-width:600px"></canvas>
