--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -309,7 +309,7 @@
               padding: 0 7px;
        }
        #inst{
-              background-color: rgb(209, 209, 202);
+              
               max-height: 40vh;
               min-height: 60px;
               min-width: 30px;
@@ -317,8 +317,8 @@
               text-align: center;
               font-family: 'Times New Roman', Times, serif;
               font-weight: bolder;
-              color: white;
-              font-size: 3em;
+              color: black;
+              font-size: 1.5em;
               margin: 10px auto ;
               
        }
@@ -379,8 +379,8 @@
 
               <div id="ff">
                      <div id="CS">
-                            <div id="inst">
-                                   sovmoi
+                            <div id="inst"> &#128269 <br>
+                                   Select the region to find the update of active covid cases.
                                    
                             </div>
 
