--- a/templates/home/giveappointments.html
+++ b/templates/home/giveappointments.html
@@ -4,6 +4,133 @@
 
 {% block css %}
 <style>
+  .block {
+            /* border: 8px solid rgb(118, 104, 240); */
+            box-shadow: 5px 5px 20px 5px rgba(255, 255, 255, 0.25),
+                -5px -5px 20px 5px rgba(255, 255, 255, 0.26);
+            border-radius: 10px;
+            overflow-y: scroll;
+            height: 350px;
+            margin: 60px;
+            /* margin-bottom: 50px;  */
+            background-image: radial-gradient(rgb(231, 229, 229), rgb(231, 247, 255));
+        }
+
+        .lv-card {
+            font-family: 'Merriweather';
+            
+        }
+
+        h1 {
+            text-align: center;
+            color: #4181ee;
+            font-family: 'Merriweather';
+        }
+
+        .wrapper {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .lv-card {
+            max-width: 500px;
+            min-height: 200px;
+            background-image: radial-gradient(#60efbc, #58d5c9);
+            padding: 30px;
+            box-sizing: border-box;
+            color: #FFF;
+            margin: 20px;
+            box-shadow: 0px 2px 18px -4px rgba(0, 0, 0, 0.75);
+        }
+
+        /* .lv-card:nth-child(2) {
+            background: #4181ee;
+        }
+
+        .lv-card:last-child {
+            background: #673ab7;
+        } */
+
+        .lv-card-title {
+            margin-top: 0;
+            font-size: 16px;
+            font-weight: 600;
+            font-family: 'Merriweather';
+            letter-spacing: 1.2px;
+        }
+
+        .input-feld {
+           
+         width: 100%;
+         padding: 7px;
+         border: 1px solid #ccc;
+         border-radius: 4px;
+         resize: vertical;
+         box-shadow: 1px 1px 1px #999;
+         max-width: 70%;
+        line-height: 1.5;
+        text-shadow: 1px 1px #fff;
+        }
+        
+       
+        .lv-card-content {
+            font-size: 14px;
+            letter-spacing: 0.5px;
+            line-height: 1.5;
+            font-family: 'Merriweather';
+        }
+ 
+        .d-flex flex-column {
+            box-shadow: 1px 1px 1px #999;
+            text-shadow: 1px 1px #fff;
+        }
+        .lv-card-btn {
+            all: unset;
+            display: block;
+            margin-left: auto;
+            border: 2px solid #FFF;
+            padding: 10px 15px;
+            border-radius: 25px;
+            font-size: 10px;
+            font-weight: 600;
+            transition: all 0.5s;
+            cursor: pointer;
+            letter-spacing: 1.2px;
+        }
+
+        .lv-card-btn:hover {
+             color: rgb(105, 216, 173);
+            background: #FFF; 
+
+            /* background-color: #5463e6;
+    border: 2px solid #6866eb;
+    color: black */
+        }
+
+        /* .lv-card:nth-child(2) .lv-card-btn:hover {
+            color: #4181ee;
+            background: #FFF;
+        }
+
+        .lv-card:last-child .lv-card-btn:hover {
+            color: #673ab7;
+            background: #FFF;
+        } */
+
+
+        .btn {
+            margin: auto;
+            width: 100%;
+        }
+
+        @media only screen and (max-width: 500px) {
+            .block {
+                width: 100vw;
+                margin: 0;
+            }
+        }
     
     
     .total-monal{
@@ -27,7 +154,7 @@
 
 
 {% for a in App %}
-<div class="card m-4" style="width: 18rem; ">
+<!-- <div class="card m-4" style="width: 18rem; ">
      <div class="card-body">
        <h5 class="card-title">Name :- {{a.Appbyname}}</h5>
        <br>
@@ -46,8 +173,59 @@
      </div>
    </div>
 
-</div>
+</div> -->
 {% endfor %}
+<div class="form">
+  <h1>Pending Appointments </h1>
+  <div class="section" id="block1">
+      <div class="block">
+
+          <div class="lv-card">
+              <h3 class="card-title">
+                  Patient's Name: 
+                  <input class="input-feld" type="text"><br>
+                  
+              </h3>
+              <p class="card-content">
+              <h5 class="card-title">Appointment Date
+                  
+              <div class="left d-flex flex-column">
+                  <input type="date">
+                  
+                 
+              </div>
+              </h5>
+              </p>
+
+
+              <a href="#" class="lv-card-btn">Mark as done</button></a>
+          </div>
+          
+          
+          <div class="lv-card">
+              <h3 class="card-title">
+                  Patient's Name: 
+                  <input class="input-feld" type="text" >
+              </h3>
+              <p class="card-content">
+              <h5 class="card-title">Appointment Date
+                 
+              <div class="left d-flex flex-column">
+                  <input type="date" class="calander">
+                  
+                 </div> 
+              </h5>
+               
+              </p>
+
+              <a href="#" class="lv-card-btn">Mark as done</button></a>
+          </div>
+
+
+
+      </div>
+  </div>
+</div>
 
 
 
