--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>{% block title %} {% endblock title %}</title>
+  <title>Covid Survivors | {% block title %} {% endblock title %}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +17,9 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     {% load static %}
+  <link rel = "icon" href = 
+"https://raw.githubusercontent.com/Bhavishya-tiwari/Web1_Covid-Survivors/master/home/static/imgs/logo.png" 
+        type = "image/x-icon">
 
     <link rel="stylesheet" href="{% static 'base.css' %}">
   {% block links %} {% endblock links %}
@@ -264,7 +267,7 @@
     .danger {
       padding: 20px;
       background-color: #d60000;
-      max-width: 400px;
+      max-width: 500px;
       min-width: 300px;
 
       color: rgb(255, 255, 255);
@@ -290,7 +293,7 @@
       padding: 20px;
       background-color: #00d607;
       box-shadow: rgb(6, 74, 0) 1px 4px 4px;
-      max-width: 400px;
+      max-width: 500px;
       min-width: 300px;
 
       color: white;
@@ -418,7 +421,7 @@ display: flex;
 }
 .middlesection-mm span{
     border-bottom: solid 2px rgb(138, 135, 135);
-    padding-bottom: 6px;
+    padding-bottom: 0px;
    
 }
 .middlesectionlink{
