--- a/templates/home/giveappointments.html
+++ b/templates/home/giveappointments.html
@@ -45,13 +45,13 @@
             box-shadow: 0px 2px 18px -4px rgba(0, 0, 0, 0.75);
         }
 
-        /* .lv-card:nth-child(2) {
+         .lv-card:nth-child(2) {
             background: #4181ee;
         }
 
         .lv-card:last-child {
             background: #673ab7;
-        } */
+        } 
 
         .lv-card-title {
             margin-top: 0;
@@ -104,12 +104,12 @@
              color: rgb(105, 216, 173);
             background: #FFF; 
 
-            /* background-color: #5463e6;
+            background-color: #5463e6;
     border: 2px solid #6866eb;
     color: black */
         }
 
-        /* .lv-card:nth-child(2) .lv-card-btn:hover {
+         .lv-card:nth-child(2) .lv-card-btn:hover {
             color: #4181ee;
             background: #FFF;
         }
@@ -117,7 +117,7 @@
         .lv-card:last-child .lv-card-btn:hover {
             color: #673ab7;
             background: #FFF;
-        } */
+        }
 
 
         .btn {
@@ -153,74 +153,57 @@
 {% block body %}
 
 
-{% for a in App %}
 <!-- <div class="card m-4" style="width: 18rem; ">
-     <div class="card-body">
-       <h5 class="card-title">Name :- {{a.Appbyname}}</h5>
-       <br>
-
-     <form method="post" action="/appointmentdatesetted/{{a.Appby}}" id="Give_AppointmentDate">{% csrf_token %}
-
-       <label for="birthday">Appointment Date</label>
-  <input type="date" id="AppointmentDate" class="form-control" name="AppointmentDate">
-
-       <button type="submit" class="btn btn-warning my-3">Set Appointment</button>
-
-  </form>
-
-      
-       
-     </div>
-   </div>
+    <div class="card-body">
+        <h5 class="card-title">Name :- {{a.Appbyname}}</h5>
+        <br>
+        
+        <form method="post" action="/appointmentdatesetted/{{a.Appby}}" id="Give_AppointmentDate">{% csrf_token %}
+            
+            <label for="birthday">Appointment Date</label>
+            <input type="date" id="AppointmentDate" class="form-control" name="AppointmentDate">
+            
+            <button type="submit" class="btn btn-warning my-3">Set Appointment</button>
+            
+        </form>
+        
+        
+        
+    </div>
+</div>
 
 </div> -->
-{% endfor %}
 <div class="form">
-  <h1>Pending Appointments </h1>
-  <div class="section" id="block1">
-      <div class="block">
-
-          <div class="lv-card">
-              <h3 class="card-title">
-                  Patient's Name: 
-                  <input class="input-feld" type="text"><br>
-                  
-              </h3>
-              <p class="card-content">
-              <h5 class="card-title">Appointment Date
-                  
-              <div class="left d-flex flex-column">
-                  <input type="date">
-                  
-                 
-              </div>
-              </h5>
-              </p>
-
-
-              <a href="#" class="lv-card-btn">Mark as done</button></a>
-          </div>
-          
-          
-          <div class="lv-card">
-              <h3 class="card-title">
-                  Patient's Name: 
-                  <input class="input-feld" type="text" >
-              </h3>
-              <p class="card-content">
-              <h5 class="card-title">Appointment Date
-                 
-              <div class="left d-flex flex-column">
-                  <input type="date" class="calander">
-                  
-                 </div> 
-              </h5>
-               
-              </p>
-
-              <a href="#" class="lv-card-btn">Mark as done</button></a>
-          </div>
-
+    <h1>Pending Appointments </h1>
+    <div class="section" id="block1">
+        <div class="block">
+            
+            {% for a in App %}
+            
+            
+            <div class="lv-card">
+                <h3 class="card-title">
+                    Patient's Name: 
+                    <input class="input-feld" type="text" value="{{a.Appbyname}}">  <br>
+                    
+                </h3>
+                <p class="card-content">
+                    <form method="post" action="/appointmentdatesetted/{{a.Appby}}" id="Give_AppointmentDate">{% csrf_token %}
+            
+                        <label for="birthday">Appointment Date</label>
+                        <input type="date" id="AppointmentDate" class="form-control" name="AppointmentDate">
+                        
+                        <button type="submit" class="lv-card-btn my-3">Set Appointment</button>
+                        
+                    </form>
+                </p>
+                
+                
+            </div>
+            
+            
+            {% endfor %}
+            
 
 
       </div>
