--- a/templates/home/getstarted.html
+++ b/templates/home/getstarted.html
@@ -3,6 +3,7 @@
 {% block title %} Get Started {% endblock title %}
 
 {% block links %}
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
 {% endblock links %}
