--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -407,7 +407,7 @@ label {
                     <div class="col-sm-3">
                       <h6 class="mb-0">Username</h6>
                     </div>
-{% if gg == "T" %}
+{% comment %} {% if gg == "T" %} {% endcomment %}
                     
                     <div class="col-sm-9 text-secondary">
                       {{user}}
@@ -417,7 +417,7 @@ label {
                       {% comment %} {{user}}  {% endcomment %}
                     </div>
 
-{% endif %} 
+{% comment %} {% endif %}  {% endcomment %}
 
 
 
