--- a/templates/base.html
+++ b/templates/base.html
@@ -737,11 +737,11 @@ body{
                     <h4><span>Explore</span> </h4>
                     <ul class="middlesection-ul">
                         <li ><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
-                            <a href="#" class="middlesectionlink">Covid Update</a></li>
+                            <a href="/covidupdates" class="middlesectionlink">Covid Update</a></li>
                         <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
-                            <a href="#" class="middlesectionlink">Donors</a></li>
+                            <a href="/donors" class="middlesectionlink">Donors</a></li>
                         <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
-                            <a href="#" class="middlesectionlink">Blogs</a></li>
+                            <a href="/blog" class="middlesectionlink">Blogs</a></li>
                     </ul>
                 </div>
                 <div class="secondmiddle-mm middleblock">
