--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -258,7 +258,7 @@ label {
               <img id="bgg" src="{% static "imgs/user.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
 {% endif %}
 {% if p1.G == "Wa" %}
-              <img id="bgg" src="{% static "imgs/adm.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+              <img id="bgg" src="{% static "imgs/admimg.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
 {% endif %}
 {% if gg == "T" %}
               <img id="bgg" src="{% static "imgs/u2.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
@@ -691,6 +691,14 @@ label {
 
 
   </a>
+
+  <h4>Review Reported Blogs</h4>
+   <a href="/reportedblogs">
+          <button class="custom-btn btn-3"><span>Reports</span></button>
+
+
+  </a>
+
 
 
                     
