--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -258,24 +258,39 @@ label {
               <img id="bgg" src="{% static "imgs/user.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
 {% endif %}
 {% if p1.G == "Wa" %}
+              <img id="bgg" src="{% static "imgs/adm.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
+{% if request.user.is_staff %}
               <img id="bgg" src="{% static "imgs/admimg.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+
+
 {% endif %}
 {% if gg == "T" %}
+{% if  request.user.is_staff %}
+{% else %}
               <img id="bgg" src="{% static "imgs/u2.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
 {% endif %}
               <div class="mt-3">
           
-                {% if gg == "T" %}
+   {% if gg == "T" %}
                 
                 <h3>{{fn}} </h3>
-                <p class="text-secondary mb-1">USER</p>
+                <p class="text-secondary mb-1">USERkkk</p>
                 
-
 {% endif %}
+
 {% if p1.G == "h" %}
 
                       <h3> {{p1.N}} {{fn}} &nbsp; {{ln}}</h3>
                       <p class="text-secondary mb-1">HOSPITAL</p>
+
+
+  {% endif %}
+{% if request.user.is_staff %}
+
+                      <h3> {{request.user.username}}</h3>
+                      <p class="text-secondary mb-1">SuperAdmin</p>
 
 
   {% endif %}
